@startuml
'https://plantuml.com/class-diagram

class users {
    - user_name: String
    - user_pass: String
}

class user_roles {
    - role_name: String
    - user_name: String
}

class roles {
    - role_name: String
}

class user_meal_plan {
    - user_name: String
    - meal_plan_name: String
}

class meal_plan {
    - meal_plan_name: String
    - meal_id: int
}

class meal {
    - meal_id: int
    - recipe_id: int
    - day: String
    - type: String
}

users "1" -- "1..*" user_roles
user_roles "1..*" -- "1" roles
users "1" -- "*" user_meal_plan
user_meal_plan "*" -- "1" meal_plan
meal_plan "*"--"1" meal
@enduml